[package]
name = "redblocks"
version = "0.1.41"
authors = ["Jacob Stannix <jakestannix at gmail dot com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "modular status bar for dwm and the like written in rust"
repository = "https://github.com/delta1024/redblocks"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sysinfo = "0.18.2"
